improviment: adicionado suporte ao novo componente worksena-mvc

--- a/module/Application/view/application/index.phtml
+++ b/module/Application/view/application/index.phtml
@@ -5,7 +5,7 @@
             <figure>
                 <img src="/assets/img/worksena-min.png" class="img-fluid logo-home">
             </figure>
-            <h3><?= $data['version'] ?></h3>
+            <h3><?= $version ?></h3>
 <!--            <h4>Micro Framework <strong>PHP</strong></h4>-->
             <div class="link">
                 <a href="https://www.worksena.xyz/documentacao" target="_blank">Documentação</a>
